tests/invalid/complexity.nim
# Count: 0
# Negative count: 1

if i == 1 and b == 2:
  i = i + 1
